--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">clover_music</string>
+    <string name="music_name">告白气球</string>
+    <string name="music_author">周杰伦</string>
 </resources>
