clover 3.12  v 1.0  可以读取本地内Music文件夹的音乐，并播放

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">clover_music</string>
-    <string name="music_name">告白气球</string>
-    <string name="music_author">周杰伦</string>
+    <string name="song"> </string>
+    <string name="singer"> </string>
 </resources>
